# text_anomalies

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
data/doec/: README.txt  reconstruction_outliers.csv
data/doec/models/: ssvae_4.ckpt
data/doec/processed/: T00010.csv  T00010.htm  T00020.csv  T00030.htm  T00040.csv  T00040.htm  T00050.csv  T00060.csv  T00070.csv  T00080.csv  T00090.csv  T00100.htm  T00110.csv  T00120.csv  T00130.csv  T00140.csv  T00140.htm  T00150.htm  T00160.csv  T00160.htm  T00170.csv  T00180.csv  T00190.csv  T00200.htm  T00210.csv  T00220.csv  T00230.csv  T00240.csv  T00250.htm  T00260.htm  T00270.csv  T00280.csv  T00290.csv  T00300.htm  T00310.csv  T00320.csv  T00330.csv  T00340.csv  T00350.csv  T00360.csv  (+5686 more)
notebooks/: finetune.ipynb  preprocess.ipynb  reconstruction_analysis.ipynb  synthetic_data.ipynb  tSNE_analysis.ipynb  test_model.ipynb
scripts/: tSNE_long.py  training.py
text_anomalies/: __init__.py  dataloader.py  early_stopper.py  training.py
text_anomalies/doec/: __init__.py  datamodule.py  dataset.py  preprocess.py  tokenizer.py
text_anomalies/model/: __init__.py  decoder.py  encoder.py  lambd.py  ssvae.py  vae.py
text_anomlies/: dataloader.py
