[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "text_anomalies"
version = "0.1.0"
authors = [
    { name = "Sebastian B. Mohr", email = "sebastian.mohr@stud.uni-goettingen.de" },
]
description = "Detecting anomalies in text data"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
]
dependencies = [
    "torch",
    "torchdata",
    "torchtext",
    "pandas",
    "pre-commit",
    "fastprogress",
    "datasets",
    "transformers",
    "tokenizers",
]
