[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "text_anomalies"
version = "0.3.1"
authors = [
    { name = "Sebastian B. Mohr", email = "sebastian.mohr@stud.uni-goettingen.de" },
]
description = "Detecting anomalies in text data"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
]
dependencies = [
    "torch",
    "pytorch-lightning",
    "ray[tune]",
    "tokenizers",
    "transformers",
    "pandas",
    "tqdm",
    "beautifulsoup4",
    "lxml",
    "pyarrow",
    "scikit-learn",
    # Repo management
    "pre-commit",
]
